objects/Quote.object
<CustomObject>
    <fields>
        <fullName>End_Date_for_Map_Page__c</fullName>
        <label>End Date for Map Page</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Image_URL__c</fullName>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Kiosk_Map_rich__c</fullName>
        <label>Kiosk Map</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Start_Date_for_Map_Page__c</fullName>
        <label>Start Date for Map Page</label>
        <type>Date</type>
    </fields>
</CustomObject>